@@ -200,6 +200,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12442: new shutil.disk_usage function, providing total, used and free
+  disk space statistics.
+
 - Issue #12451: The XInclude default loader of xml.etree now decodes files from
   UTF-8 instead of the locale encoding if the encoding is not specified. It now
   also opens XML files for the parser in binary mode instead of the text mode
